# Orcha

./: .gitignore  LICENSE  LICENSE.md  Makefile  README.md  RELEASE.md  go.mod
cmd/orcha/: main.go
cmd/orcha-debug/: main.go
cmd/orcha-run/: main.go
examples/: article.txt  orcha.yaml  short-note.txt
examples/output/: result.txt
internal/engine/: context.go  context_test.go  executor.go  integration_test.go
internal/engine/testdata/: pipeline.yaml
internal/ipc/: protocol.go  server.go
internal/parser/: defaults_test.go  schema.go  typecheck.go  typecheck_test.go  yaml.go
internal/runners/: ai.go  ai_test.go  file.go  http.go  runner.go
npm/: .npmignore  README.md  package.json
npm/lib/: downloader.js  errors.js  index.d.ts  index.js
npm/test/: api.test.js
pkg/: provider.go  registry.go
pkg/anthropic/: anthropic.go  anthropic_test.go
pkg/deepseek/: deepseek.go  deepseek_test.go
pkg/openai/: openai.go
python/: README.md  pyproject.toml
python/orcha/: __init__.py  cli.py  client.py  downloader.py  errors.py  events.py
python/tests/: test_smoke.py
tools/genmanifest/: main.go
