[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orcha"
dynamic = ["version"]
description = "Unix pipes for AI workflows. Define tasks and pipelines in YAML; execute with a single Go binary auto-downloaded on first run."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["../LICENSE"]
authors = [{ name = "Orcha Authors" }]
keywords = ["ai", "workflow", "pipeline", "yaml", "openai", "llm", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/ryfoo/orcha"
Repository = "https://github.com/ryfoo/orcha"
Issues = "https://github.com/ryfoo/orcha/issues"
Changelog = "https://github.com/ryfoo/orcha/releases"

[project.scripts]
orcha = "orcha.cli:main"

[tool.setuptools.dynamic]
version = { attr = "orcha.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["orcha*"]

[tool.setuptools.package-data]
orcha = ["py.typed"]
